translation-tool/inputs/source_meta/objects/Hsvc_FAPTokenManagement__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting will be used to configure FAP Free token details</description>
    <fields>
        <fullName>Hsvc_AvailableProfiles__c</fullName>
        <label>Available Profiles</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_Bandwidth__c</fullName>
        <label>Bandwidth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_BillingDealPrice__c</fullName>
        <label>Billing Deal Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_BillingDeal__c</fullName>
        <label>Billing Deal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hsvc_Plan__c</fullName>
        <label>Plan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_WebserviceParam__c</fullName>
        <label>Web Service Parameters</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_WebserviceURL__c</fullName>
        <label>Web Service URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hvsc_TokenDisplayName__c</fullName>
        <label>Token Display Name (in MB)</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>FAP Token Management</label>
</CustomObject>